<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/layout_tab"
        android:layout_width="fill_parent"
        android:layout_height="40dp">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="40dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_recommend"
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:background="@drawable/item_common_bg"
                android:gravity="center"
                android:text="@string/book_city_recommend"
                android:textColor="@color/main_dress_color"
                android:textSize="@dimen/font_size_middle" />

            <TextView
                android:id="@+id/tv_rank"
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:background="@drawable/item_common_bg"
                android:gravity="center"
                android:text="@string/book_city_rank"
                android:textColor="@color/tv_desc_color"
                android:textSize="@dimen/font_size_middle" />

            <TextView
                android:id="@+id/tv_category"
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:background="@drawable/item_common_bg"
                android:gravity="center"
                android:text="@string/book_city_category"
                android:textColor="@color/tv_desc_color"
                android:textSize="@dimen/font_size_middle" />
        </LinearLayout>

        <ImageView
            android:id="@+id/iv_line"
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:layout_alignParentBottom="true"
            android:background="@color/main_shadow_color" />

        <com.viewpagerindicator.UnderlinePageIndicator
            android:id="@+id/indicator"
            android:layout_width="fill_parent"
            android:layout_height="4dp"
            android:layout_alignParentBottom="true" />
    </RelativeLayout>

    <com.qiwenge.android.ui.SlowViewPager
        android:id="@+id/viewpager_book_city"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"></com.qiwenge.android.ui.SlowViewPager>

</LinearLayout>